syntax = "proto3";
package calculator;

option go_package="./calculator/calculatorpb";

enum Operation {
    OPCODE_SUM = 0;
    OPCODE_SUB = 1;
    OPCODE_MUL = 2;
    OPCODE_DIV = 3;
}

message OperationArgs {
    Operation operation = 1;
    float value1 = 2;
    float value2 = 3;
}

message OperationRequest {
    OperationArgs operation_args = 1;
}

message OperationResponse {
    float result = 1;
}

message PrimeNumberDecompositionRequest {
    uint32 number = 1;
}

message PrimeNumberDecompositionResponse {
    uint32 prime = 1;
}

message ComputeAverageRequest {
    int32 number = 1;
}

message ComputeAverageResponse {
    double average = 1;
}

service CalculatorService {
    // Unary gRPC
    rpc Calculate(OperationRequest) returns (OperationResponse) {};
    // Server Streaming gRPC
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
    // Client Streaming gRPC
    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};
}